--- a/Amy/Amy.csproj
+++ b/Amy/Amy.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+	<RepositoryUrl>https://github.com/Gramli/Amy</RepositoryUrl>
+	<PackageDescription>C# .NET Core lib for parsing formal grammars.</PackageDescription>
+	<Version>1.0.0</Version>
   </PropertyGroup>
 
 </Project>
